[tool.poetry]
name = "grow-vmdk"
version = "0.1.0"
description = "Safely grow VMware VMDK disks and extend LVM volumes online."
authors = ["Eric Sammons <elsammons@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyvmomi = ">=8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
pyyaml = ">=6.0"
yamllint = ">=1.35"
ansible-lint = ">=24.0"

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["grow-vmdk.py"]

[tool.yamllint]
extends = "default"
